# labslack

./: .aiignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.serena/: project.yml
.serena/memories/: project_instructions.md
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  FEATURE_REQUEST_TEMPLATE.md  JIRA_ISSUES.md  PROJECT_INSTRUCTIONS.md
docs/features/: cluster_notifications.feature  dm_relay.feature  message_formatting.feature  webhook_relay.feature
scripts/: test_relay.py
src/labslack/: __init__.py  app.py  config.py  logging.py  metrics.py
src/labslack/database/: __init__.py  connection.py  models.py
src/labslack/formatters/: __init__.py  message_formatter.py
src/labslack/handlers/: __init__.py  dm_handler.py  notify_handler.py  webhook_handler.py
src/labslack/notifications/: __init__.py  formatters.py  service.py  slack_notifier.py
src/labslack/relay/: __init__.py  message_relay.py
tests/: __init__.py  conftest.py
tests/bdd/: __init__.py  conftest.py  test_cluster_notifications.py
tests/integration/: __init__.py  test_message_relay.py
tests/unit/: __init__.py  test_database.py  test_dm_handler.py  test_logging.py  test_message_formatter.py  test_message_relay.py  test_metrics.py  test_notification_formatters.py  test_notification_service.py  test_notify_handler.py  test_slack_notifier.py  test_webhook_handler.py
